[tool.poetry]
name = "cipher_xl2673"
version = "0.1.0"
description = "Building my first experimental Python package"
authors = ["Grace <xl2673@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
